fixed dark mode,slider and setup other categories in navbar

--- a/pages/style.css
+++ b/pages/style.css
@@ -39,6 +39,13 @@ p {
     background-color: black;
 }
 
+.navbar-container.active, 
+.navbar-container.active .menu-list-item, 
+.navbar-container.active .menu-list-item a {
+    color: black;
+}
+
+
 .navbar-container {
     display: flex;
     align-items: center;
@@ -207,6 +214,7 @@ p {
     right: 1px;
     border-radius: 50%;
     cursor: pointer;
+    transition: 0.6s ease all;
 }
 
 .sidebar {
@@ -363,19 +371,12 @@ p {
 .arrow {
     font-size: 120px;
     position: absolute;
+    right: 0;
     top: 90px;
     color: lightgray;
     opacity: 0.7;
     cursor: pointer;
     z-index: 1;
-}
-
-.left-arrow {
-    left: 0; 
-}
-
-.right-arrow {
-    right: 0;
 }
 
 .not-signed-in {
@@ -399,7 +400,6 @@ p {
 }
 
 .navbar-container.active{
-
     background-color: white;
     color:black;
 }
@@ -764,3 +764,4 @@ button:hover{
     color:purple;
     margin-right: 10px;
 }
+
